Hide search dropdown for non-staff users, fixes #589

--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -10,7 +10,8 @@
       <button type="submit" class="btn btn-primary" id="search-submit-header">
         <%= t('sufia.search.button.html') %>
       </button>
-      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+      <%# CHF edit to hide search dropdown for non-staff users %>
+      <button class="btn btn-default dropdown-toggle <%= 'hidden' unless current_ability.current_user.staff? %>" type="button" data-toggle="dropdown">
         <span data-search-element="label"><%= t("sufia.search.form.option.all.label_long") %></span>
         <span class="caret"></span>
       </button>
