Correct searchbox element heights in ff / safari, fixes #590

--- a/app/assets/stylesheets/local/homepage.scss
+++ b/app/assets/stylesheets/local/homepage.scss
@@ -50,7 +50,7 @@
     .input-group {
       height: 46px;
       input.q, button {
-        height: 100%
+        height: 46px;
       }
     }
     @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
