--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -1,3 +1,5 @@
+<%# copied from https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_search_form.html.erb
+    to override searchbox dropdown visibility %>
 <%= form_tag search_form_action, method: :get, id: "search-form-header", role: "search" do %>
   <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
   <%= hidden_field_tag :search_field, 'all_fields' %>
