--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -9,13 +9,14 @@
     <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
 
     <div class="input-group-btn">
-      <button type="submit" class="btn btn-primary" id="search-submit-header">
-        <%= t('sufia.search.button.html') %>
-      </button>
       <%# CHF edit to hide search dropdown for non-staff users %>
       <button class="btn btn-default dropdown-toggle <%= 'hidden' unless current_ability.current_user.staff? %>" type="button" data-toggle="dropdown">
         <span data-search-element="label"><%= t("sufia.search.form.option.all.label_long") %></span>
         <span class="caret"></span>
+      </button>
+      <%# CHF edit: swapped dropdown and submit button to make rounded corners simpler %>
+      <button type="submit" class="btn btn-primary" id="search-submit-header">
+        <%= t('sufia.search.button.html') %>
       </button>
 
       <ul class="dropdown-menu pull-right">
