Use svg for footer logo instead of png

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer id="footer" role="contentinfo">
   <div class="footerrow footerlogo">
     <%= link_to "https://www.chemheritage.org", title: "Chemical Heritage Foundation Main Site" do %>
-      <%= image_tag "chf_logo_footer.png", alt: "Chemical Heritage Foundation logo" %>
+      <%= image_tag "chf_logo_above_name_white.svg", alt: "Chemical Heritage Foundation logo" %>
     <% end %>
   </div>
 
