add a period to the end of the intro copy sentence

--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -12,7 +12,7 @@
       <div class="row search-container">
         <div class="digital-description col-xs-12 col-sm-6 col-md-12">
           <h2>Digital Collections</h2>
-          <p>Search a growing selection of our digitized materials in the history of science: artifacts, photographs, advertisements, manuscripts, letters, books, and more</p>
+          <p>Search a growing selection of our digitized materials in the history of science: artifacts, photographs, advertisements, manuscripts, letters, books, and more.</p>
         </div>
         <div class="search-callouts col-xs-12 col-sm-6 col-md-12">
           <%= render 'catalog/search_form' %>
