Use bright blue as brand-primary instead of brand-secondary

--- a/app/assets/stylesheets/local/footer.scss
+++ b/app/assets/stylesheets/local/footer.scss
@@ -61,7 +61,7 @@ body {
       font-size: 24px;
 
       a, a:link, a:visited, a:hover, a:active {
-        color: $brand-secondary;
+        color: $brand-primary;
         text-decoration: none;
         transition-property: color;
         transition-duration: 0.25s;
