--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -34,7 +34,7 @@ html {
   .navbar-header > a,
   .navbar-header > a:hover,
   .navbar-header > a:focus {
-    color: $brand-secondary;
+    color: $brand-primary;
     text-decoration: none;
     font-style: light;
     font-stretch: expanded;
