Add link to samvera.org

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,6 @@
 <p>Our Digital Collections offers digitized highlights from CHF's Library, Archival and Museum collections. It represents only a small portion of our entire collection, with new material added every day. More information about our Collections is available <a href="https://www.chemheritage.org/collections">here</a>.</p>
 
-<p>The purpose of the Digital Collections is to offer one central location to manage, preserve and provide access to all of CHF’s digital assets. It is built on the open-source technology stack Samvera (formerly Project Hydra), comprised of Fedora 4, Solr, Blacklight and Ruby on Rails. All of our <a href="https://github.com/chemheritage/chf-sufia">code is freely available</a> on GitHub via an Apache 2.0 license.</p>
+<p>The purpose of the Digital Collections is to offer one central location to manage, preserve and provide access to all of CHF’s digital assets. It is built on the open-source technology stack <a href="http://samvera.org">Samvera</a> (formerly Project Hydra), comprised of Fedora 4, Solr, Blacklight and Ruby on Rails. All of our <a href="https://github.com/chemheritage/chf-sufia">code is freely available</a> on GitHub via an Apache 2.0 license.</p>
 
 <p>This project was made possible in part by the Institute of Museum and Library Services grant SP-02-16-0014-16. We also wish to acknowledge the generous support of the Arnold and Mabel Beckman Foundation and Robert W. Gore.</p>
 
