--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -26,7 +26,7 @@
     </div>
 
     <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
-      <div class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(:'sufia.controls.about').upcase, sufia.about_path, :'data-no-turbolink'=>"true" %></li>
         <li><%= link_to t(:'sufia.controls.help').upcase, sufia.help_path %></li>
         <li><%= mail_to Sufia.config.contact_email, t(:'sufia.controls.contact').upcase %></li>
