Add link to policy page from about page

--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About</h1>
 
-<p>The Chemical Heritage Foundation’s Digital Collections offer highlights from its library, archives, and museum collections. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. More information about our collections is available <a href="https://www.chemheritage.org/collections">here</a>.</p>
+<p>The Chemical Heritage Foundation’s Digital Collections offer highlights from its library, archives, and museum collections. Although the Digital Collections include only a small portion of our entire collection, new material is added every day. Please see our <%= link_to "Digital Collections Policy", policy_path %> for more details on the scope and selection criteria. More information about our collections is available <a href="https://www.chemheritage.org/collections">here</a>.</p>
 
 <p>The purpose of CHF’s Digital Collections is to manage, preserve, and provide access to CHF’s digital assets all in one location. It is built on the open-source technology stack <a href="http://samvera.org">Samvera</a> (formerly Project Hydra), composed of Fedora 4, Solr, Blacklight, and Ruby on Rails. All of our <a href="https://github.com/chemheritage/chf-sufia">code is freely available</a> on GitHub via an Apache 2.0 license.</p>
 
