Add faq page, remove help, refs #572"

--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(:'sufia.controls.about').upcase, sufia.about_path, :'data-no-turbolink'=>"true" %></li>
-        <li><%= link_to t(:'sufia.controls.help').upcase, sufia.help_path %></li>
+        <li><%= link_to "FAQ", faq_path %></li>
         <li><%= link_to t(:'sufia.controls.contact').upcase, sufia.contact_path %></li>
       </ul><!-- /.nav -->
     </div>
