download links in viewer

--- a/app/views/curation_concerns/base/_chf_download_menu.html.erb
+++ b/app/views/curation_concerns/base/_chf_download_menu.html.erb
@@ -1,13 +1,17 @@
-<%# required locals:
-      * member -- presenter for the 'member', could be file_set or work
-      * parent -- presenter for the containing work
-%>
+<%#
 
-<div class="btn-group dropup">
-  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    <%# less space for admin, just use icon %>
-    <i class='fa fa-download'></i> <% if ! current_ability.current_user.staff? %> Download <% end %>
-  </button>
+Just the <ul> menu that is composed in a div to make a bootstrap4 dropdown.
+it is used in show_page_image and image_viewer.
+
+locals:
+      * parent -- presenter for the containing work. required.
+      * member -- presenter for the 'member', could be file_set or work. Normally
+        required, but can be left out for creating a blank template for JS filling,
+        as in viewer.
+%>
+<% member ||= nil %>
+
+
   <ul class="dropdown-menu">
     <% if parent.has_rights_statement? %>
       <li><%= render 'rights_statement', presenter: parent, theme: 'inline' %></li>
@@ -15,31 +19,33 @@
     <% end %>
     <li class="dropdown-header">Download this image</li>
     <li>
-      <%= link_to main_app.download_path(member.representative_id),
+      <%= link_to(( member ? main_app.download_path(member.representative_id) : "#" ),
                   target: "_new",
                   id: "file_download",
                   data: {
-                    label: member.id,
+                    content_hook: "dl-original-link",
+                    label: (member.id if member),
                     # These action/labels are what sufia/hyrax uses, although
                     # a bit weird. https://github.com/samvera/hyrax/blob/1e504c200fd9c39120f514ac33cd42cd843de9fa/app/assets/javascripts/hyrax/ga_events.js
                     analytics_event: "Files",
                     analytics_label: "Downloaded",
-                    analytics_value: member.representative_id
-                  } do %>
-          Original Image — <%= member.file_format %>
+                    analytics_value: (member.representative_id if member)
+                  }) do %>
+          Original Image
       <% end %>
     </li>
     <li>
-      <%= link_to "Full-size JPEG",
-                  riiif_image_url(member.original_file_id, format: "jpg", size: "full"),
+      <%= link_to("Full-size JPEG",
+                  (member ? riiif_image_url(member.riiif_file_id, format: "jpg", size: "full") : "#"),
                   target: "_new",
                   data: {
+                    content_hook: "dl-jpeg-link",
                     # These action/labels are based on what sufia/hyrax uses, although
                     # a bit weird.
                     analytics_event: "Files",
                     analytics_label: "Downloaded-jpg",
-                    analytics_value: member.representative_id
-                  } %>
+                    analytics_value: (member.representative_id if member)
+                  }) %>
     </li>
   </ul>
-</div>
+
