--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -41,7 +41,15 @@
 
     <div class="show-page-image-bar">
       <% if (member.model_name.singular.to_sym == :file_set) && can?(:read, member.id) %>
-        <%= render "show_page_image_download_menu", member: member, parent: @presenter %>
+        <div class="btn-group dropup">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%# less space for admin, just use icon %>
+            <i class='fa fa-download'></i> <% if ! current_ability.current_user.staff? %> Download <% end %>
+          </button>
+
+          <%= render "chf_download_menu", member: member, parent: @presenter %>
+        </div>
+
       <% end %>
 
       <% if (member.model_name.singular.to_sym == :file_set) && current_ability.current_user.staff? %>
