use common class for dl.info

--- a/app/assets/stylesheets/local/policy.scss
+++ b/app/assets/stylesheets/local/policy.scss
@@ -1,12 +1,4 @@
-.policy-page {
-  dl {
-    dt {
-      font-weight: normal;
-      font-style: italic;
-      margin-top: 1em;
-    }
-    dd {
-      margin-top: .25em;
-    }
-  }
+.policy-page dl dt {
+  font-weight: normal;
+  font-style: italic;
 }
