--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -1,7 +1,7 @@
 <div class="faq-page">
   <h1>Frequently Asked Questions</h1>
 
-  <dl>
+  <dl class="info">
     <dt>Why does it say this site is in beta?</dt>
     <dd>We are in a “soft launch” phase in which we are testing the Digital Collections before the full release. Every day our software developers are adding new code to enhance the features and improve the design. The site may look different from one day to the next, and you may experience some errors or downtime.</dd>
 
