--- a/app/views/static/policy.html.erb
+++ b/app/views/static/policy.html.erb
@@ -10,7 +10,7 @@
   <h2>Purpose</h2>
   <p>The Digital Collections provide long-term preservation and high-quality access to CHF’s digital resources. Inclusion in the Digital Collections must be for one or more of the following reasons:</p>
 
-  <dl>
+  <dl class="info">
     <dt>Access</dt>
     <dd>Popular, significant, rare, or unique items would benefit from easier digital access and improved discoverability through cross-collection search and browse. Materials supporting the research of current fellows or those with restricted physical access due to fragility or value may be prioritized.</dd>
 
@@ -27,7 +27,7 @@
   <h2>Selection Criteria</h2>
   <p>Priority for digitization must also satisfy at least three of the following criteria but should strive to fulfill as many of the criteria as possible, when relevant:</p>
 
-  <dl>
+  <dl class="info">
     <dt>Significance of the Materials</dt>
     <dd>Items have intellectual, cultural, and/or monetary value.</dd>
 
