--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -55,3 +55,13 @@ html {
     }
   }
 }
+
+/* informational dls, as on faq, policy page */
+dl.info {
+  dt {
+    margin-top: 1em;
+  }
+  dd {
+    margin-top: .25em;
+  }
+}
