uppercase masthead in CSS

--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -28,6 +28,7 @@ html {
 .masthead {
   min-height: 90px;
   padding: 20px 5px 20px 20px;
+  text-transform: uppercase;
   .navbar-nav > li > a,
   .navbar-nav > li > a:hover,
   .navbar-nav > li > a:focus,
