--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -27,9 +27,9 @@
 
     <div class="collapse navbar-collapse pull-right" id="top-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(:'sufia.controls.about').upcase, sufia.about_path, :'data-no-turbolink'=>"true" %></li>
+        <li><%= link_to t(:'sufia.controls.about'), sufia.about_path, :'data-no-turbolink'=>"true" %></li>
         <li><%= link_to "FAQ", main_app.faq_path %></li>
-        <li><%= link_to t(:'sufia.controls.contact').upcase, sufia.contact_path %></li>
+        <li><%= link_to t(:'sufia.controls.contact'), sufia.contact_path %></li>
       </ul><!-- /.nav -->
     </div>
   </div>
