--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -33,11 +33,11 @@
                 <button href="#" id="viewer-right" class="viewer-image-next" data-trigger="viewer-next" tabindex="0"><i class="fa fa-chevron-right" title="Next"></i></button>
               </div>
 
-              <%= render "chf_image_viewer_navbar", count: work.member_presenters.count %>
+              <%= render "chf_image_viewer_navbar", count: work.viewable_member_presenters.count %>
             </div>
 
-            <%= content_tag "div", id:"viewer-thumbs", class: "viewer-thumbs", data: { total_count: work.member_presenters.count } do %>
-              <% work.member_presenters.each_with_index do |member_presenter, i| -%>
+            <%= content_tag "div", id:"viewer-thumbs", class: "viewer-thumbs", data: { total_count: work.viewable_member_presenters.count } do %>
+              <% work.viewable_member_presenters.each_with_index do |member_presenter, i| -%>
                 <%= tag "img",
                     class: "lazyload viewer-thumb-img",
                     alt: "",
