--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -18,12 +18,19 @@
 <%= content_tag("div",
       tabindex: "0",
       data: {
-        trigger: "chf_image_viewer",
+        # only trigger the viewer if there's an image to show in it
+        trigger: member.riiif_file_id ? "chf_image_viewer" : "",
         member_id: member.representative_id
       },
       class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do
 %>
-    <% if local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1 %>
+    <% if member.riiif_file_id.nil? %>
+      <%# if there's no image, show the default thumbnail (it gets indexed) %>
+      <%= image_tag member.thumbnail_path,
+                    class: "show-page-image-image",
+                    alt: ""
+      %>
+    <% elsif local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1 %>
       <%= image_tag nil,
                     class: "lazyload show-page-image-image",
                     alt: "",
