--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -50,9 +50,9 @@
                       member_should_show_info: member_presenter.model_name.to_s != "FileSet",
                       member_id: member_presenter.representative_id,
                       member_show_url: contextual_path(member_presenter, work),
-                      member_dl_original_url: main_app.download_path(member_presenter.representative_id),
-                      member_dl_jpeg_url: riiif_image_url(member_presenter.riiif_file_id, format: "jpg", size: "full"),
-                      tile_source: riiif_info_url(member_presenter.riiif_file_id),
+                      member_dl_original_url: member_presenter.representative_id ? main_app.download_path(member_presenter.representative_id) : "",
+                      member_dl_jpeg_url: riiif_image_url(member_presenter, format: "jpg", size: "full"),
+                      tile_source: riiif_info_url(member_presenter),
                       src: member_presenter.first(blacklight_config.view_config(document_index_view_type).thumbnail_field)
                     }
                 -%>
