--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -9,37 +9,36 @@
     <%= text_field_tag :q, current_search_parameters , class: "q form-control", id: "search-field-header", placeholder: t("sufia.search.form.q.placeholder") %>
 
     <div class="input-group-btn">
-      <%# CHF edit to hide search dropdown for non-staff users %>
-      <button class="btn btn-default dropdown-toggle <%= 'hidden' unless current_ability.current_user.staff? %>" type="button" data-toggle="dropdown">
-        <span data-search-element="label"><%= t("sufia.search.form.option.all.label_long") %></span>
-        <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu pull-right">
-        <li>
-          <%= link_to t("sufia.search.form.option.all.label_long"), "#",
-              data: { "search-option" => main_app.search_catalog_path, "search-label" => t("sufia.search.form.option.all.label_short") } %>
-        </li>
-
-        <% if current_user %>
-          <li>
-            <%= link_to t("sufia.search.form.option.my_works.label_long"), "#",
-                data: { "search-option" => sufia.dashboard_works_path, "search-label" => t("sufia.search.form.option.my_works.label_short") } %>
-          </li>
-          <li>
-            <%= link_to t("sufia.search.form.option.my_collections.label_long"), "#",
-                data: { "search-option" => sufia.dashboard_collections_path, "search-label" => t("sufia.search.form.option.my_collections.label_short") } %>
-          </li>
-          <li>
-            <%= link_to t("sufia.search.form.option.my_shares.label_long"), "#",
-                data: { "search-option" => sufia.dashboard_shares_path, "search-label" => t("sufia.search.form.option.my_shares.label_short") } %>
-          </li>
-        <% end %>
-      </ul>
-
-      <%# CHF edit: swapped dropdown and submit button to get rounded corners %>
       <button type="submit" class="btn btn-primary" id="search-submit-header">
         <%= t('sufia.search.button.html') %>
       </button>
+      <%# CHF edit to hide search dropdown for non-staff users %>
+      <% if current_ability.current_user.staff? %>
+        <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+          <span data-search-element="label"><%= t("sufia.search.form.option.all.label_long") %></span>
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu pull-right">
+          <li>
+            <%= link_to t("sufia.search.form.option.all.label_long"), "#",
+                data: { "search-option" => main_app.search_catalog_path, "search-label" => t("sufia.search.form.option.all.label_short") } %>
+          </li>
+          <% if current_user %>
+            <li>
+              <%= link_to t("sufia.search.form.option.my_works.label_long"), "#",
+                  data: { "search-option" => sufia.dashboard_works_path, "search-label" => t("sufia.search.form.option.my_works.label_short") } %>
+            </li>
+            <li>
+              <%= link_to t("sufia.search.form.option.my_collections.label_long"), "#",
+                  data: { "search-option" => sufia.dashboard_collections_path, "search-label" => t("sufia.search.form.option.my_collections.label_short") } %>
+            </li>
+            <li>
+              <%= link_to t("sufia.search.form.option.my_shares.label_long"), "#",
+                  data: { "search-option" => sufia.dashboard_shares_path, "search-label" => t("sufia.search.form.option.my_shares.label_short") } %>
+            </li>
+          <% end %>
+        </ul>
+      <% end %>
 
     </div><!-- /.input-group-btn -->
 
