--- a/app/views/sufia/homepage/index.html.erb
+++ b/app/views/sufia/homepage/index.html.erb
@@ -36,7 +36,7 @@
       <div class="row featured-collection-callouts no-gutters">
         <div class="col-xs-12">
           <h2>Featured Collection</h2>
-          <p>The <%= link_to "Beckman Historical Collection", collection_path('wh246s128') %> covers the life and career of American scientist and philanthropist Arnold O. Beckman (1900 - 2004) and the growth of his companies. When Beckman invented the first commercially successful pH meter in 1934, he became a key player in both the American scientific instrument industry and the 20th-century scientific instrumentation revolution.</p>
+          <p>The <%= link_to "Beckman Historical Collection", collection_path('wh246s128') %> covers the life and career of American scientist and philanthropist Dr. Arnold O. Beckman (1900–2004) and the growth of his companies. When Dr. Beckman invented the first commercially successful pH meter in 1934, he became a key player in both the American scientific instrument industry and the 20th-century scientific instrumentation revolution.</p>
           <%= link_to "BROWSE COLLECTIONS",
             collections_path,
             class: "btn btn-primary btn-lg chf-callout-button" %>
