lazysizes-aspectratio on all show page images
Takes up proper space on page even before image has loaded, since we tell it expected
aspect ratio, gotten from recorded characterization.

works whether the images is being lazy loaded or normal loaded, nice!
lazysizes-aspectratio is a nice script

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -35,6 +35,7 @@
                     class: "lazyload show-page-image-image",
                     alt: "",
                     data: {
+                      aspectratio: "#{member.representative_width}/#{member.representative_height}", # used for lazysizes-aspectratio
                       src: riiif_image_url(member.riiif_file_id, format: "jpg", size: "#{base_width},"),
                       srcset: riiif_image_srcset_pixel_density(member.riiif_file_id, base_width)
                     }
@@ -45,6 +46,7 @@
                     srcset: riiif_image_srcset_pixel_density(member.riiif_file_id, base_width),
                     alt: "",
                     data: {
+                      aspectratio: "#{member.representative_width}/#{member.representative_height}", # used for lazysizes-aspectratio
                       trigger: "chf_image_viewer",
                       member_id: member.id
                     }
