--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -91,9 +91,11 @@
 
     .show-page-image-image {
       width: 100%;
-      // keep crazy long aspect ratio images from being
-      // so long, although there will be some distortion.
-      max-height: 80vh;
+      // sanity max-height to keep keep crazy long aspect ratio images from
+      // totally ruining page. Very difficult to get this right based on
+      // aspect ratio, cause the dimensions are so responsive. This is just
+      // a rough huge limit, if it's not working out just delete this and give up.
+      max-height: 300vw;
     }
 
     .show-page-member-title {
@@ -156,9 +158,6 @@
           background: #AAA asset-url('spinner.svg') no-repeat center;
         }
         vertical-align: bottom;
-        // keep crazy long aspect ratio images from being
-        // so long, although there will be some distortion.
-        max-height: 30vw;
         min-height: 100px; // just so it's something!
       }
 
