unified member_image_tag helper for use on _show_page_image

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -30,27 +30,11 @@
                     class: "show-page-image-image",
                     alt: ""
       %>
-    <% elsif local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1 %>
-      <%= image_tag nil,
-                    class: "lazyload show-page-image-image",
-                    alt: "",
-                    data: {
-                      aspectratio: "#{member.representative_width}/#{member.representative_height}", # used for lazysizes-aspectratio
-                      src: riiif_image_url(member.riiif_file_id, format: "jpg", size: "#{base_width},"),
-                      srcset: riiif_image_srcset_pixel_density(member.riiif_file_id, base_width)
-                    }
-      %>
     <% else %>
-      <%= image_tag riiif_image_url(member.riiif_file_id, format: "jpg", size: "#{base_width},"),
-                    class: "show-page-image-image",
-                    srcset: riiif_image_srcset_pixel_density(member.riiif_file_id, base_width),
-                    alt: "",
-                    data: {
-                      aspectratio: "#{member.representative_width}/#{member.representative_height}", # used for lazysizes-aspectratio
-                      trigger: "chf_image_viewer",
-                      member_id: member.id
-                    }
-      %>
+      <%= member_image_tag(member,
+                           size_key: local_assigns[:size],
+                           lazy: (local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1))
+       %>
     <% end %>
 
     <% if current_ability.current_user.staff? || member.model_name.singular.to_sym != :file_set %>
