--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -53,7 +53,11 @@
                       member_show_url: contextual_path(member_presenter, work),
                       member_dl_original_url: main_app.download_path(member_presenter.representative_id),
                       member_dl_jpeg_url: riiif_image_url(member_presenter.riiif_file_id, format: "jpg", size: "full"),
-                      tile_source: riiif_info_url(member_presenter.riiif_file_id),
+                      tile_source: (if CHF::Env.lookup(:use_image_server_on_viewer)
+                                      riiif_info_url(member_presenter.riiif_file_id)
+                                    else
+                                      {"type" => "image", "url" => main_app.download_path(member_presenter.representative_id, file: "jpeg")}.to_json
+                                    end),
                       src: member_presenter.first(blacklight_config.view_config(document_index_view_type).thumbnail_field)
                     } if member_presenter.riiif_file_id # don't show it in the viewer if there's no image
                 -%>
