--- a/app/views/curation_concerns/base/_chf_download_menu.html.erb
+++ b/app/views/curation_concerns/base/_chf_download_menu.html.erb
@@ -24,12 +24,11 @@ locals:
                   id: "file_download",
                   data: {
                     content_hook: "dl-original-link",
-                    label: (member.id if member),
                     # These action/labels are what sufia/hyrax uses, although
                     # a bit weird. https://github.com/samvera/hyrax/blob/1e504c200fd9c39120f514ac33cd42cd843de9fa/app/assets/javascripts/hyrax/ga_events.js
-                    analytics_event: "Files",
-                    analytics_label: "Downloaded",
-                    analytics_value: (member.representative_id if member)
+                    analytics_category: "Work",
+                    analytics_action: "download-tiff",
+                    analytics_label: parent.id
                   }) %>
     </li>
     <li>
@@ -40,9 +39,9 @@ locals:
                     content_hook: "dl-jpeg-link",
                     # These action/labels are based on what sufia/hyrax uses, although
                     # a bit weird.
-                    analytics_event: "Files",
-                    analytics_label: "Downloaded-jpg",
-                    analytics_value: (member.representative_id if member)
+                    analytics_category: "Work",
+                    analytics_action: "download-jpg",
+                    analytics_label: parent.id
                   }) %>
     </li>
   </ul>
