--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -20,7 +20,7 @@
       class: ["show-page-image"] + Array(local_assigns[:extra_classes])) do
 %>
 
-    <%= member_image_tag(member,
+    <%= member_image_tag(@presenter.id, member,
                          size_key: local_assigns[:size],
                          lazy: (local_assigns[:lazy_after] && member_counter > local_assigns[:lazy_after] - 1))
     %>
