inline rights_statement in _chf_download_menu
This did have significant perf impact.

Turning it into a helper instead of a partial had the same perf impact, if we wanted to keep DRY.

But I think this was a false DRY in the first place, it really IS a
different thing, the code is actually cleaning with it being separate,
with it's completely own CSS class, trying to override the CSS
for the 'large' rights statement didn't make a lot of sense or make
the CSS easier to deal with. (The CSS here is still kind of a mess,
but only trying to fix what's relevant for the perf improvement here.
writing maintainable CSS is not something I'm great at yet.)

Note that all the actual heavy-lifting is done by calls to
the presenters _anyway_ (which then call out to CHF::RightsStatement
in turn).  There was just no good reason for the additional layer
of indirection/DRY in the first place, this is an all around
code improvement even aside from perf I think.

This makes me consider turning the OTHER two partials into helper
methods though, to see how that effects perf.

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -82,6 +82,20 @@
     }
   }
 
+  .rights-statement-inline {
+    // turn br into space
+    .rights-statement-label br {
+      content: " ";
+      &:after {
+        content:" ";
+      }
+    }
+    .rights-statement-logo {
+      width: 1em;
+      vertical-align: middle;
+    }
+  }
+
   // An image with overlaid action buttons and metadata, used for
   // representative image and thumbs on show page. Internal overlay
   // elements are absolutely positioned within it.
@@ -170,19 +184,5 @@
         width: calc(50% / 3 - 10px);
       }
     }
-  }
-}
-
-.rights-statement.inline {
-  // turn br into space
-  .rights-statement-label br {
-    content: " ";
-    &:after {
-      content:" ";
-    }
-  }
-  .rights-statement-logo {
-    width: 1em;
-    vertical-align: middle;
   }
 }
