change _chf_download_menu partial to helper
This gives us significantly improved performance in show page when this is being called
lots of times, once for each member. Not entirely sure why, but it does. Rails.

--- a/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer_navbar.html.erb
@@ -24,7 +24,7 @@
         <i class="fa fa-download"></i> <span class="viewer-navbar-label">Download</span>
       </button>
 
-      <%= render 'chf_download_menu', parent: work %>
+      <%= member_download_menu nil, parent: work %>
 
     </div>
 
