--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -44,7 +44,7 @@
             <%# less space for admin, just use icon %>
             <i class='fa fa-download'></i> <% if ! current_ability.current_user.staff? %> Download <% end %>
           </button>
-          <%= render "chf_download_menu", member: member, parent: @presenter %>
+          <%= member_download_menu(member, parent: @presenter) %>
         </div>
 
       <% end %>
