--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -53,10 +53,10 @@
                       member_show_url: contextual_path(member_presenter, work),
                       member_dl_original_url: main_app.download_path(member_presenter.representative_id),
                       member_dl_jpeg_url: (if CHF::Env.lookup(:use_image_server_downloads)
-                                            riiif_image_url(member_presenter.riiif_file_id, format: "jpg", size: "full")
+                                            iiif_image_url(member_presenter.riiif_file_id, format: "jpg", size: "full")
                                           end),
                       tile_source: (if CHF::Env.lookup(:use_image_server_on_viewer)
-                                      riiif_info_url(member_presenter.riiif_file_id)
+                                      iiif_info_url(member_presenter.riiif_file_id)
                                     else
                                       {"type" => "image", "url" => main_app.download_path(member_presenter.representative_id, file: "jpeg")}.to_json
                                     end),
