viewer with imgix uses osd imgix direct url

--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -58,12 +58,15 @@
                       tile_source: (if CHF::Env.lookup(:use_image_server_on_viewer)
                                       # TODO this needs to be config switch between riiif/IIIF and imgix
                                       #riiif_info_url(member_presenter.riiif_file_id)
-                                      {
-                                         "type" => "imgix",
-                                         "baseUrl" => imgix_url(member_presenter.id),
-                                         "height" => member_presenter.representative_height,
-                                         "width" => member_presenter.representative_width
-                                      }.to_json
+
+                                      imgix_url(member_presenter.id, fm: "json", osd: "imgix")
+
+                                      # {
+                                      #    "type" => "imgix",
+                                      #    "baseUrl" => imgix_url(member_presenter.id),
+                                      #    "height" => member_presenter.representative_height,
+                                      #    "width" => member_presenter.representative_width
+                                      # }.to_json
                                     else
                                       {"type" => "image", "url" => main_app.download_path(member_presenter.representative_id, file: "jpeg")}.to_json
                                     end),
