--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -55,11 +55,7 @@
                       member_dl_jpeg_url: (if CHF::Env.lookup(:use_image_server_downloads)
                                             iiif_image_url(member_presenter.representative_file_id, format: "jpg", size: "full")
                                           end),
-                      tile_source: (if CHF::Env.lookup(:use_image_server_on_viewer)
-                                      iiif_info_url(member_presenter.representative_file_id)
-                                    else
-                                      {"type" => "image", "url" => main_app.download_path(member_presenter.representative_id, file: "jpeg")}.to_json
-                                    end),
+                      tile_source: tile_source_url(member_presenter),
                       src: member_presenter.first(blacklight_config.view_config(document_index_view_type).thumbnail_field)
                     } if member_presenter.representative_file_id # don't show it in the viewer if there's no image
                 -%>
