--- a/app/assets/stylesheets/local/chf_image_viewer.scss
+++ b/app/assets/stylesheets/local/chf_image_viewer.scss
@@ -65,6 +65,11 @@
   display: flex;
   flex-direction: column;
 
+  .viewer-alert {
+    position: absolute;
+    z-index: 1;
+  }
+
   .viewer-header {
     flex-shrink: 0;
     background-color: $brand-inverse;
