--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -27,7 +27,8 @@
 
           <div class="viewer-content">
 
-            <div class="viewer-image-and-navbar">
+
+            <div class="viewer-image-and-navbar" data-alert-container>
               <div class="viewer-image" id="openseadragon-container">
                 <button href="#" id="viewer-left" class="viewer-image-prev" data-trigger="viewer-prev" tabindex="0"><i class="fa fa-chevron-left" title="Previous"></i></button>
                 <button href="#" id="viewer-right" class="viewer-image-next" data-trigger="viewer-next" tabindex="0"><i class="fa fa-chevron-right" title="Next"></i></button>
