Add new metadata field 'Exhibition', fixes #573

--- a/app/views/curation_concerns/base/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/base/_attribute_rows.html.erb
@@ -26,6 +26,7 @@
 <%= presenter.attribute_to_html(:inscription) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted ) %>
 <%= presenter.attribute_to_html(:division, label: "Department", render_as: :faceted) %>
+<%= presenter.attribute_to_html(:exhibition) %>
 <%= presenter.attribute_to_html(:series_arrangement) %>
 <%# TODO: , render_as: :physical_container %>
 <%= presenter.attribute_to_html(:physical_container) %>
