Fix show page for work with more than one member

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -2,18 +2,12 @@
     `representative_media` for show page, as well as for page thumbs on show page
 
     Locals:
-      * size: :large (used for big hero image) or :medium used for subsequent
-        page images. Default :medium
+      * size: :large (used for big hero image) or :standard used for subsequent
+        page images.
       * lazy_after: optional. used when this is used as a collection partial, make images
           lazy loading after the first N images, where N is the lazy_after value.
       * extra_classes: optional. extra CSS calsses added to the wrapper <div> tag.
 
-%>
-<%
-   # this was just derived from just looking in the browser at our present
-   # CSS, what's the widest the 'large' and 'medium' images can be at
-   # any responsive CSS?
-   base_width = local_assigns[:size] == :large ? 525 : 208
 %>
 <%= content_tag("div",
       tabindex: "0",
