--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -59,7 +59,7 @@
              as: :member,
              locals: {
                extra_classes: 'thumb',
-               actions_as_icon: true,
+               size: :standard,
                lazy_after: 6
              }
   %>
