lazysizes and aspectratio, but no aspectratio on viewer thumbs

--- a/app/views/curation_concerns/base/_chf_image_viewer.html.erb
+++ b/app/views/curation_concerns/base/_chf_image_viewer.html.erb
@@ -45,7 +45,7 @@
                     tabindex: "0",
                     role: "button",
                     data: {
-                      aspectratio: "#{member_presenter.representative_width}/#{member_presenter.representative_height}", # used for lazysizes-aspectratio
+                      # aspectratio: "#{member_presenter.representative_width}/#{member_presenter.representative_height}", # used for lazysizes-aspectratio
                       trigger: 'change-viewer-source',
                       index: i + 1,
                       title: member_presenter.link_name,
